# BezierGreen

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cagedeformations/include/cagedeformations/: GreenCoordinates.h  LoadMesh.h
cagedeformations/src/: GreenCoordinates.cpp  LoadMesh.cpp  Parametrization.cpp
data/Bar/: Bar_bezier_cage.txt  Bar_bezier_cage_deformed.txt  Bar_bezier_cage_deformed2.txt  Bar_bezier_cage_deformed3.txt
data/Bench/: Bench_bezier_cage.txt  Bench_bezier_cage_deformed.txt
data/Botijo/: Botijo_bezier_cage.txt  Botijo_bezier_cage_deformed.txt
data/Cactus/: Cactus_bezier_cage.txt  Cactus_bezier_cage_deformed.txt  Cactus_bezier_cage_deformed2.txt  Cactus_bezier_cage_deformed3.txt
data/Horse/: Horse_bezier_cage.txt  Horse_bezier_cage_deformed.txt
data/ManHead/: ManHead_bezier_cage.txt  ManHead_bezier_cage_deformed.txt
data/SpikyBox/: SpikyBox_bezier_cage.txt  SpikyBox_bezier_cage_deformed.txt  SpikyBox_bezier_cage_deformed2.txt
data/WireSphere/: WireSphere_bezier_cage.txt  WireSphere_bezier_cage_deformed.txt
